--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+:root {
+  --main-bg-color: #fdfdfd;
+  --bg-white: #ffffff;
+  --bg-purple: #7367f0;
+  --bg-tomato: #ea5455;
+  --bg-blue: #0396ff;
+  --bg-green: #28c76f;
+  --bg-cyand: #32ccbc;
+  --bg-yellow: #f8d800;
+  --cyan-gradient: linear-gradient(135deg, #90f7ec 10%, #32ccbc 100%);
+  --green-gradient: linear-gradient(135deg, #81fbb8 10%, #28c76f 100%);
+  --blue-gradient: linear-gradient(135deg, #6b73ff 10%, #000dff 100%);
+  --pruple-gradient: linear-gradient(135deg, #ce9ffc 10%, #7367f0 100%);
+  --shadow-color: rgba(236, 50, 50, 0.08);
+  --hover-shadow-color: rgba(0, 0, 0, 0.05);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--main-bg-color);
+}
+
+.box {
+  width: auto;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  font-size: 1em;
+  box-shadow: 0px 0px 51px 0px var(--shadow-color), 0px 6px 18px 0px var(--hover-shadow-color);
+  transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(0px);
+}
+
+.bg-cyan-gradient {
+  color: white;
+  background-image: var(--cyan-gradient);
+}
+
+.bg-purple-gradient {
+  color: var(--bg-white);
+  background-image: var(--pruple-gradient);
+}
+
+.bg-green {
+  color: white;
+  background-image: var(--green-gradient);
+}
+
+.box:hover {
+  box-shadow: 0px 0px 114px 0px var(--shadow-color),
+    0px 30px 25px 0px var(--hover-shadow-color);
+  transform: translateY(-5px);
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
