--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,14 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  color: #f8d800;
+  text-decoration: none;
+}
