--- a/src/index.css
+++ b/src/index.css
@@ -67,12 +67,32 @@ body {
 }
 
 a {
-  color: #ffffff;
+  color: #1a192b;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #f8d800;
+  color: #1a192b;
   text-decoration: none;
+}
+
+.error {
+  text-align: center;
+}
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+.alert-danger {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+
+.field {
+  margin-bottom: 2rem;
 }
