--- a/src/index.css
+++ b/src/index.css
@@ -37,15 +37,18 @@ body {
 .bg-cyan-gradient {
   color: white;
   background-image: var(--cyan-gradient);
+  background-image: var(--cyan-gradient);
 }
 
 .bg-purple-gradient {
   color: var(--bg-white);
   background-image: var(--pruple-gradient);
+  background-image: var(--pruple-gradient);
 }
 
 .bg-green {
   color: white;
+  background-image: var(--green-gradient);
   background-image: var(--green-gradient);
 }
 
@@ -66,33 +69,74 @@ body {
   flex-direction: column;
 }
 
-a {
-  color: #1a192b;
-  text-decoration: none;
+.list-inline {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
 }
 
-a:hover,
-a:focus {
-  color: #1a192b;
-  text-decoration: none;
+.list-inline li {
+  margin-right: 1rem;
 }
 
-.error {
+.btn {
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #e74c3c;
+  border-radius: 0.6em;
+  color: #e74c3c;
+  cursor: pointer;
+  display: -webkit-box;
+  display: flex;
+  align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
   text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
 }
-.alert {
-  position: relative;
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
-  border: 1px solid transparent;
-  border-radius: 0.25rem;
-}
-.alert-danger {
-  color: #721c24;
-  background-color: #f8d7da;
-  border-color: #f5c6cb;
+.btn:hover,
+.btn:focus {
+  color: #fff;
+  outline: 0;
 }
 
-.field {
-  margin-bottom: 2rem;
+.fifth {
+  border-color: #fff;
+  border-radius: 0;
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  -webkit-transition: color 150ms ease-in-out;
+  transition: color 150ms ease-in-out;
+}
+.fifth:after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 0;
+  height: 100%;
+  background: var(--bg-yellow);
+  z-index: -1;
+  -webkit-transition: width 150ms ease-in-out;
+  transition: width 150ms ease-in-out;
+}
+.fifth:hover {
+  color: #fff;
+}
+.fifth:hover:after {
+  width: 110%;
 }
